Edited text on landing site pages

--- a/landing/templates/questions.html
+++ b/landing/templates/questions.html
@@ -31,11 +31,10 @@
                 </div>
                 <div class="faq-body">
                   <p class="lead">eConvenor isn't supposed to make money.</p>
-                  <p>eConvenor is a tool made by activists to help other activists. We work on and run eConvenor for free. Money is not our motivation.</p>
+                  <p>eConvenor is a tool made by activists to help other activists. We work on and run eConvenor for free. Money is not our motivation. eConvenor won't carry advertising, won't sell your data and won't charge a fee for "premium" features.</p>
                   <p>Like everything though, eConvenor has some operating costs, so we ask better funded groups to contribute financially if they can, and we require a financial contribution from political parties and trade unions.</p>
-                  <p>eConvenor won't have advertising, won't sell your data and won't charge a fee for "premium" features.</p>
-                  <p>Most groups who use eConvenor will have a tiny budget, or no budget at all. These are the groups we had in mind when we built it, and they can use eConvenor for free.</p>
-                  <p>eConvenor will never make a profit. All money which we receive for eConvenor will go back into eConvenor -- both into keeping it running and improving it.</p>
+                  <p>Most groups who use eConvenor will have a tiny budget, or no budget at all. These are the groups we had in mind when we built it, and they can use eConvenor for free and with no obligations.</p>
+                  <p>eConvenor will never make a profit. All money which we receive for eConvenor will go back into running and improving eConvenor.</p>
                 </div>
               </li>
               <li>
@@ -46,7 +45,7 @@
                 <div class="faq-body">
                   <p class="lead">Two Australian activists.</p>
                   <p>eConvenor was started by two activists from Melbourne, Australia -- Keira and Sky.</p>
-                  <p>For a few decades we've seen how campaigns and groups struggle to be organised and get things done efficiently.</p>
+                  <p>For a few decades we've seen how campaigns and groups struggle to organise themselves and get things done efficiently.</p>
                   <p> One day we realised that a lot of the work of convening a group could be done by a computer, so although we don't have IT backgrounds, we decided to try and make a "virtual convenor". eConvenor is the result and the service launched in April 2014.</p>
                 </div>
               </li>
@@ -60,11 +59,11 @@
                 </div>
                 <div class="faq-body">
                   <p class="lead">It's as secure as we can make it, but all security is relative.</p>
-                  <p>There's no such thing as perfect security -- data is routinely stolen even from well-resourced targets like governments and trans-national corporations. We do our best to keep eConvenor secure, but we can't give any guarantees.</p>
-                  <p>Broadly speaking, there are three types of security which you need to consider with regard to data held in any web service -- security against theft, security against government demand and security against accidental loss.</p>
-                  <p>Theft: eConvenor is built on Django. Django is a mature, open-source web-application framework which has had plenty of time to get the underlying security right. eConvenor is hosted by Webfaction in the UK. Webfaction are a Platform as a Service (PaaS) provider who make sure that the server which eConvenor runs on is up-to-date and well maintained. eConvenor shouldn't be an easy target for data theft.</p>
-                  <p>Government demand: eConvenor is based in Melbourne, Australia, and runs from servers in the UK. We will only hand data over to a government agency if we are forced to by a <i>valid</i> Australian or UK court order, and even then we'll fight against it as hard as possible. Note though that goverment agencies have been known to use sophisticated technical means to <i>secretly</i> collect data from even the largest web service providers (Gmail, Facebook, etc) and it's impossible to know how well eConvenor's code and servers would resist such attacks.</p>
-                  <p>Accidental loss: We keep multiple backups of your data on our UK server, and multiple backups of your data on our machines in Australia. The possibility of accidental loss of data is remote. Also, eConvernor emails you copies of your agendas and minutes, so you also have your own copies of much of the data which eConvenor stores for you.</p>
+                  <p>There's no such thing as perfect computer security -- data is routinely stolen even from well-resourced targets like governments and transnational corporations. We do our best to keep eConvenor secure, but we can't give any guarantees.</p>
+                  <p>Broadly speaking, there are three types of security to consider with regard to data held in a web service -- security against theft, security against government demand and security against accidental loss.</p>
+                  <p><strong>Theft:</strong> eConvenor is built on <i>Django</i>. Django is a mature, open-source web-application framework which has had plenty of time to get the underlying security right. eConvenor is hosted by Webfaction in the UK. Webfaction are a Platform as a Service (PaaS) provider who make sure that the server which eConvenor runs on is up-to-date and well maintained. eConvenor shouldn't be an easy target for data theft.</p>
+                  <p><strong>Government demand:</strong> eConvenor is based in Australia and runs on servers in the UK. We will only hand data over to a government agency if we are forced to by a <i>valid</i> Australian or UK court order, and even then we'll fight against any demand vigourously. Note though that goverment agencies have used sophisticated technical means to <i>secretly</i> collect data from even the largest web service providers (Gmail, Facebook, etc) and eConvenor's code and servers might be vulerable to such attacks.</p>
+                  <p><strong>Accidental loss:</strong> We keep multiple backups of your data on our UK server, and multiple backups of your data on our machines in Australia. The possibility of accidental loss of data is remote. Also, eConvernor emails you all your agendas and minutes, so you also have your own copies of much of the data which eConvenor stores for you.</p>
                 </div>
               </li>
               <li>
@@ -74,7 +73,7 @@
                 </div>
                 <div class="faq-body">
                   <p class="lead">Yes, but be sensible.</p>
-                  <p>eConvenor's Terms and Conditions require us to protect your data and keep it confidential. They form a contract with you which we are bound by, and we take our responsibilities under it very seriously. We handle the data stored in eConvenor with greater confidentiality than for-profit services like Google Drive or Dropbox.</p>
+                  <p>eConvenor's Terms and Conditions require us to protect your data and keep it confidential. They form a contract with you which we are bound by, and we take our responsibilities under it very seriously. We handle the data stored in eConvenor with stricter confidentiality than for-profit services like Google Drive or Dropbox.</p>
                   <p>Remember though, that if your data is very sensitive, you should not be trusting it to <i>any</i> online service. Very sensitive data should be carefully encrypted and stored on computers and storage media which you own and can keep physically secure.</p>
                 </div>
               </li>
@@ -122,7 +121,7 @@
                   <p class="lead">Can I do something to help eConvenor in just 5 minutes?</p>
                 </div>
                 <div class="faq-body">
-                  <p class="lead">Yes, by using social media.</p>
+                  <p class="lead">Yes, by spreading the word via social media.</p>
                   <p>We'd love it if you'd Tweet or Facebook a recommendation about eConvenor to the activists you know.</p>
                   <p>One of our main challenges at the moment is getting word about eConvenor to the people and groups who will benefit from using it. If you can take a few minutes to help us with that we'd really, really appreciate it!</p>
                 </div>
@@ -135,12 +134,12 @@
                 <div class="faq-body">
                   <p class="lead">We're desperate for switched-on, reliable, nice people to work on eConvenor.</p>
                   <p>eConvenor has the potential to be a great tool for activists around the world, and it needs a lot of work for it to realise that potential. We welcome people to work on it with us.</p>
-                  <p>eConvenor is a very rewarding project. It has clear goals, high standards, is well organised and produces tangible results. It's coordinated by nice people who are good to work with.</p>
+                  <p>eConvenor is a very rewarding project. It has clear goals, high standards, is well organised and produces tangible results. It's also coordinated by nice people who are good to work with.</p>
                   <p>To work on eConvenor you must be sensible, focused, good at cooperating with other people and have good politics.</p>
                   <p>We are looking specifically for people with skills in coding (Python/Django), web development (HTML/CSS/JS), web application security, graphic design and writing/communications.</p>
                   <p>There are also always miscellaneous tasks which need doing, and the only pre-requisite for working on them is an ability to take some initiative and solve problems.</p>
                   <p>You probably realise this already, but just to be clear: eConvenor does not offer paid positions. It's a volunteer-run project.</p>
-                  <p>If you're interested, please <a href={% url 'contact' %}>contact us</a>!</p>
+                  <p>If you're interested, check out our page for people who'd like to <a href={% url 'volunteer' %}>work with us</a>!</p>
                 </div>
               </li>
               <li>
