--- a/landing/templates/source.html
+++ b/landing/templates/source.html
@@ -3,7 +3,7 @@
 
 {% block seo %}
   <title>eConvenor  |  Source code</title>
-  <meta name="description" content="The eConvenor source code.">
+  <meta name="description" content="eConvenor's source code.">
 {% endblock seo %}
 
 {% block content %}
@@ -24,7 +24,7 @@
           <div class="col-md-10">
             <h2 class="red">Code repository</h2>
             <p class="lead">eConvenor is open-source and the code is in our <a href="https://github.com/econvenor/econvenor" target="_blank">Github repository</a>.</p>
-            <p>Clone it and start hacking on it right now if you like.</p>
+            <p>You can clone it and start hacking right now if you like.</p>
             <h2 class="red">Issue tracker</h2>
             <p class="lead">Take a look at eConvenor's <a href="https://trac.econvenor.org" target="_blank">Trac issue tracker</a> to see what needs to be done next.</p>
             <p>Feel free to take on anything you see!</p>
