--- a/landing/templates/volunteer.html
+++ b/landing/templates/volunteer.html
@@ -40,7 +40,7 @@
                   <p class="lead">High standards</p>
                 </div>
                 <div class="faq-body">
-                  <p>We\'re not just about making eConvenor something that will do the job, we're about making it the very best service it can be. We apply high standards to what we make, and we apply high standards to the process we use to make it.</p>
+                  <p>We're not just about making eConvenor something that will do the job, we're about making it the very best service it can be. We apply high standards to what we make, and we apply high standards to the process we use to make it.</p>
                 </div>
               </li>
               <li>
@@ -116,7 +116,7 @@
                   <p class="lead">Nothing to prove</p>
                 </div>
                 <div class="faq-body">
-                  <p>The eConvenor project wants people who are motivated by the aim of making the world a better place. There is no place within the project for people with large egos or something to prove. We want the project group to be harmonious and in our experience people with these attributes undermine that.</p>
+                  <p>The eConvenor project wants people who are just motivated by the aim of making the world a better place and aren't trying to prove anthing to anyone. There is no place within the project for people with large egos or something to prove. We want the project group to be harmonious, and in our experience people with big egos or something to prove undermine that.</p>
                 </div>
               </li>
               <li>
@@ -125,20 +125,23 @@
                   <p class="lead">Good politics</p>
                 </div>
                 <div class="faq-body">
-                  <p>The eConvenor project rests on a foundation of opposition to all forms of oppression. We just call this "good politics". You must have good politics to work on eConvenor with us.</p>
+                  <p>The eConvenor project rests on a foundation of opposition to <i>all</i> forms of oppression. We just call this "good politics". You must have good politics to work on eConvenor with us.</p>
                 </div>
               </li>
               <li>
                 <div class="faq-title">
                   <i class="fa fa-li fa-plus-circle fa-lg red"></i>
-                  <p class="lead">Useful skills</p>
+                  <p class="lead">Useful skills and/or initiative</p>
                 </div>
                 <div class="faq-body">
                   <p>We are looking specifically for people with skills in coding (Python/Django), web development (HTML/CSS/JS), web application security, graphic design and writing/communications.</p>
-                  <p>There are also always miscellaneous tasks which need doing, and the only pre-requisite for working on them is an ability to take some initiative and solve problems.</p>
+                  <p>That said, there are also always miscellaneous tasks which need doing, and the only pre-requisite for working on them is an ability to take some initiative and solve problems. If you're the right sort of person, we'll find ways for you to work on eConvenor with us no matter what your skills are.</p>
                 </div>
               </li>
             </ul>
+            <h2 class="red">Sound okay?</h2>
+            <p class="lead">If this sounds like it's up your alley, <a href={% url 'contact' %}>let us know!</a></p>
+            <p class="lead"> Note that Convenor is a volunteer organisation and doesn't have paid jobs.</p>
           </div><!-- /.col --> 
         </div><!-- /.row -->
       </div><!-- /.container -->
