--- a/landing/templates/project.html
+++ b/landing/templates/project.html
@@ -23,11 +23,11 @@
         <div class="row">
           <div class="col-md-10">
             <h2 class="red">Goal</h2>
-            <p class="lead">The project provides the eConvenor service to help activist groups around the world be better organised and more effective.</p>
+            <p class="lead">We provide the eConvenor service to help activist groups around the world be better organised and more effective.</p>
             <h2 class="red">Background</h2>
             <p class="lead">The eConvenor project is a volunteer-run and not-for-profit.</p>
-            <p>The core of the project are Keira and Sky -- two activists from Melbourne, Australia.</p>
-            <p>The service went live in April 2014.</p>
+            <p>The core of the project are Keira and Sky -- two activists from Melbourne, Australia -- who were motivated to create eConvenor by decades of watching activist groups struggle to organise themselves and be effective.</p>
+            <p>The eConvenor service went live in April 2014.</p>
             <h2 class="red">Join in</h2>
             <p class="lead">eConvenor is an exciting project and it's off to a flying start.</p>
             <p>If you're interested in helping the activist groups of the world be more effective, here's how you can <a href={% url 'volunteer' %}>be part of the project</a>.</p>
