--- a/landing/templates/questions.html
+++ b/landing/templates/questions.html
@@ -61,8 +61,8 @@
                   <p class="lead">It's as secure as we can make it, but all security is relative.</p>
                   <p>There's no such thing as perfect computer security -- data is routinely stolen even from well-resourced targets like governments and transnational corporations. We do our best to keep eConvenor secure, but we can't give any guarantees.</p>
                   <p>Broadly speaking, there are three types of security to consider with regard to data held in a web service -- security against theft, security against government demand and security against accidental loss.</p>
-                  <p><strong>Theft:</strong> eConvenor is built on <i>Django</i>. Django is a mature, open-source web-application framework which has had plenty of time to get the underlying security right. eConvenor is hosted by Webfaction in the UK. Webfaction are a Platform as a Service (PaaS) provider who make sure that the server which eConvenor runs on is up-to-date and well maintained. eConvenor shouldn't be an easy target for data theft.</p>
-                  <p><strong>Government demand:</strong> eConvenor is based in Australia and runs on servers in the UK. We will only hand data over to a government agency if we are forced to by a <i>valid</i> Australian or UK court order, and even then we'll fight against any demand vigourously. Note though that goverment agencies have used sophisticated technical means to <i>secretly</i> collect data from even the largest web service providers (Gmail, Facebook, etc) and eConvenor's code and servers might be vulerable to such attacks.</p>
+                  <p><strong>Theft:</strong> eConvenor is built on Django. Django is a mature, open-source web-application framework which has had plenty of time to get the underlying security right. eConvenor is hosted by Webfaction in the UK. Webfaction are a Platform as a Service (PaaS) provider who make sure that the server which eConvenor runs on is up-to-date and well maintained. eConvenor shouldn't be an easy target for data theft.</p>
+                  <p><strong>Government demand:</strong> eConvenor is based in Australia and runs on servers in the UK. We will only hand data over to a government agency if we are forced to by a valid Australian or UK court order, and even then we'll fight against any demand vigourously. Note though that goverment agencies have used sophisticated technical means to secretly collect data from even the largest web service providers (Gmail, Facebook, etc) and eConvenor's code and servers might be vulerable to such attacks.</p>
                   <p><strong>Accidental loss:</strong> We keep multiple backups of your data on our UK server, and multiple backups of your data on our machines in Australia. The possibility of accidental loss of data is remote. Also, eConvernor emails you all your agendas and minutes, so you also have your own copies of much of the data which eConvenor stores for you.</p>
                 </div>
               </li>
@@ -74,7 +74,7 @@
                 <div class="faq-body">
                   <p class="lead">Yes, but be sensible.</p>
                   <p>eConvenor's Terms and Conditions require us to protect your data and keep it confidential. They form a contract with you which we are bound by, and we take our responsibilities under it very seriously. We handle the data stored in eConvenor with stricter confidentiality than for-profit services like Google Drive or Dropbox.</p>
-                  <p>Remember though, that if your data is very sensitive, you should not be trusting it to <i>any</i> online service. Very sensitive data should be carefully encrypted and stored on computers and storage media which you own and can keep physically secure.</p>
+                  <p>Remember though, that if your data is very sensitive, you should not be trusting it to any online service. Very sensitive data should be carefully encrypted and stored on computers and storage media which you own and can keep physically secure.</p>
                 </div>
               </li>
               <li>
@@ -85,7 +85,7 @@
                 <div class="faq-body">
                   <p class="lead">No.</p>
                   <p>We will not voluntarily give/transfer/sell/whatever your data to anyone for any reason.</p>
-                  <p>If we are pressured to hand over data by a government agency, we will resist vigourously, but if we are faced with a <i>valid</i> Australian or UK court order (eConvenor is based in Australia and runs on servers in the UK), we will comply with it.</p>
+                  <p>If we are pressured to hand over data by a government agency, we will resist vigourously, but if we are faced with a valid Australian or UK court order (eConvenor is based in Australia and runs on servers in the UK), we will comply with it.</p>
                 </div>
               </li>
               <li>
@@ -96,8 +96,8 @@
                 <div class="faq-body">
                   <p class="lead">Sadly, you can't.</p>
                   <p>We don't like it, but we have to say it: setting up a service like eConvenor would be a good way for an intelligence service (or services) to spy on activist groups.</p>
-                  <p>Although we know we're not spies, cops, or anthing of that nature, there's nothing we can do or say that can prove that to you. That said, you can't know whether <i>any</i> web service might be spying on you. Keep in mind also that we know that services like Google and Facebook -- which many groups use to organise themselves -- <i>are</i> spying on their users.</p>
-                  <p>With all data your group puts online, whether with eConvenor or any other web service, ask yourself if it would be a problem if government agencies saw it. For most groups, the answer to that question will be "no" most of the time. When the answer is "yes" though, keep that data off the internet unless you <i>really</i> know your way around encryption tools.</p>
+                  <p>Although we know we're not spies, cops, or anthing of that nature, there's nothing we can do or say that can prove that to you. That said, you can't know whether any web service might be spying on you. Keep in mind also that we know that services like Google and Facebook -- which many groups use to organise themselves -- are spying on their users.</p>
+                  <p>With all data your group puts online, whether with eConvenor or any other web service, ask yourself if it would be a problem if government agencies saw it. For most groups, the answer to that question will be "no" most of the time. When the answer is "yes" though, keep that data off the internet unless you really know your way around encryption tools.</p>
                 </div>
               </li>
               <li>
