--- a/landing/templates/source.html
+++ b/landing/templates/source.html
@@ -24,10 +24,10 @@
           <div class="col-md-10">
             <h2 class="red">Code repository</h2>
             <p class="lead">eConvenor is open-source and the code is in our <a href="https://github.com/econvenor/econvenor" target="_blank">Github repository</a>.</p>
-            <p>You can clone it and start hacking right now if you like.</p>
+            <p class="lead">You can clone it and start hacking right now if you like.</p>
             <h2 class="red">Issue tracker</h2>
             <p class="lead">Take a look at eConvenor's <a href="https://trac.econvenor.org" target="_blank">Trac issue tracker</a> to see what needs to be done next.</p>
-            <p>Feel free to take on anything you see!</p>
+            <p class="lead">Feel free to take on anything you see!</p>
           </div><!-- /.col -->
         </div><!-- /.row -->
       </div><!-- /.container -->
