--- a/landing/templates/volunteer.html
+++ b/landing/templates/volunteer.html
@@ -125,7 +125,7 @@
                   <p class="lead">Good politics</p>
                 </div>
                 <div class="faq-body">
-                  <p>The eConvenor project rests on a foundation of opposition to <i>all</i> forms of oppression. We just call this "good politics". You must have good politics to work on eConvenor with us.</p>
+                  <p>The eConvenor project rests on a foundation of opposition to all forms of oppression. We just call this "good politics". You must have good politics to work on eConvenor with us.</p>
                 </div>
               </li>
               <li>
