Corrected typos in landing site text

--- a/landing/templates/volunteer.html
+++ b/landing/templates/volunteer.html
@@ -31,7 +31,7 @@
                   <p class="lead">Clear goals</p>
                 </div>
                 <div class="faq-body">
-                  <p>The eConvenor project focuses on building and maintaining the eConvenor service according to the vision outlined in the eConvenor Functional Specification. The specification sets out clear, achieveable goals and we make sure that everything we do moves the project closer to achieving them.</p>
+                  <p>The eConvenor project focuses on building and maintaining the eConvenor service according to the vision outlined in the eConvenor Functional Specification. The specification sets out clear, achievable goals and we make sure that everything we do moves the project closer to reaching them.</p>
                 </div>
               </li>
               <li>
@@ -116,7 +116,7 @@
                   <p class="lead">Nothing to prove</p>
                 </div>
                 <div class="faq-body">
-                  <p>The eConvenor project wants people who are just motivated by the aim of making the world a better place and aren't trying to prove anthing to anyone. There is no place within the project for people with large egos or something to prove. We want the project group to be harmonious, and in our experience people with big egos or something to prove undermine that.</p>
+                  <p>The eConvenor project wants people who are just motivated by the aim of making the world a better place and aren't trying to prove anything to anyone. There is no place within the project for people with large egos or something to prove. We want the project group to be harmonious, and in our experience people with big egos or something to prove undermine that.</p>
                 </div>
               </li>
               <li>
