--- a/landing/templates/source.html
+++ b/landing/templates/source.html
@@ -23,11 +23,20 @@
         <div class="row">
           <div class="col-md-10">
             <h2 class="red">Code repository</h2>
-            <p class="lead">eConvenor is open-source and the code is in our <a href="https://github.com/econvenor/econvenor" target="_blank">Github repository</a>.</p>
+            <p class="lead">eConvenor is open-source and the code is in our <a href="https://github.com/econvenor/econvenor" target="_blank">Github repo</a>.</p>
             <p class="lead">You can clone it and start hacking right now if you like.</p>
             <h2 class="red">Issue tracker</h2>
             <p class="lead">Take a look at eConvenor's <a href="https://trac.econvenor.org" target="_blank">Trac issue tracker</a> to see what needs to be done next.</p>
-            <p class="lead">Feel free to take on anything you see!</p>
+            <p class="lead">Feel free to take on anything you see there!</p>
+            <h2 class="red">Licence</h2>
+            <p class="lead">This licence applies to use of the eConvenor source code if, for example, you decide to run it on your own server. This licence doesn't apply to use of the econvenor.org service -- it's covered by our <a href={% url 'terms' %}>Terms and Conditions</a>.</p>
+            <p>Use of the eConvenor source code and its documentation (the "Software") is subject to these conditions:</p>
+            <p>1. The Software must only be used by groups or organisations which are not-for-profit, have a progressive focus and are commited to social justice.</p>
+            <p>2. Unions and political parties must pay the eConvenor project an annual licence fee to use the Software. Unions and political parties must contact the eConvenor project by email and pay the licence fee which the eConvenor project sets in return for the right to use the Software.</p>
+            <p>3. Groups who are not unions or political parties and who use the Software should make an annual donation to the eConvenor project if they have the financial resources to do so.</p>
+            <p>4. Groups who are not unions or political parties and who use the Software and who do not have the financial resources to make an annual donation to the eConvenor project may use the Software free of charge.</p>
+            <p>5. The Software is provided "as is", without a warranty of any kind.</p>
+            <p>6. The eConvenor project will not be liable for any damage or loss resulting from the use of the Software.</p>
           </div><!-- /.col -->
         </div><!-- /.row -->
       </div><!-- /.container -->
