Added a Pricing page to landing site

--- a/landing/templates/index.html
+++ b/landing/templates/index.html
@@ -305,7 +305,7 @@
               <li><i class="fa-li fa fa-square fa-3x red"></i>
                 <ul>
                   <li><p class="lead red">Political parties and trade unions</p></li>
-                  <li><p>Political parties and trade unions in high income countries who are progressive and committed to social justice can use eConvenor for a fee.</p></li>
+                  <li><p>Political parties and trade unions in high income countries who are progressive and committed to social justice can use eConvenor <a href={% url 'pricing' %}>for a fee</a>.</p></li>
                 </ul>                                
               </li>
             </ul><!-- /.fa-ul -->
