--- a/landing/templates/landing_base.html
+++ b/landing/templates/landing_base.html
@@ -68,6 +68,7 @@
             <p class="lead">Contribute</p>      
             <p><a href={% url 'volunteer' %}>Work on eConvenor</a></p>
             <p><a href={% url 'donate' %}>Donate money</a></p>
+            <p><a href={% url 'pricing' %}>Unions & political parties</a></p>
           </div><!-- /.col -->
         </div><!-- /.row -->
       </div><!-- /.container -->
