--- a/econvenor/commonstatic/css/landing.css
+++ b/econvenor/commonstatic/css/landing.css
@@ -570,6 +570,22 @@ li p.lead {
   padding: 0px 0px 0px 0px;
 }
 
+.general .table.table-bordered {
+  width: 97%;
+  margin: 30px 0 30px 10px;
+}
+
+.general .table th {
+  color: #ffffff;
+  font-weight: normal;
+  background-color: #555555;
+}
+
+.general .table td {
+  color: #333333;
+  background-color: #fafafa;
+}
+
 /* REGISTRATION PAGES
 -------------------------------------------------- */
 
@@ -669,10 +685,10 @@ form .panel-heading {
 }
 
 .panel-register .table th {
-  color: #333333;
+  color: #ffffff;
   font-size: 0.85em;
   font-weight: normal;
-  background-color: #e9e9e9;
+  background-color: #555555;
 }
 
 .panel-register .table td {
