--- a/landing/templates/pricing.html
+++ b/landing/templates/pricing.html
@@ -23,7 +23,7 @@
         <div class="row">
           <div class="col-md-10">
           <h2 class="red">Account pricing</h2>
-<p>Unions and political parties in a high-income, reasonably democratic countries who use eConvenor must pay a fee to support the project. You can set up a free 30-day trial account to evaluate the service first.</p>
+<p>Unions and political parties in high-income, reasonably democratic countries who use eConvenor must pay a fee to support the project. You can set up a free 30-day trial account to evaluate the service first -- press the sign up button above and follow the prompts.</p>
             <table class="table table-bordered">
               <tbody>
                 <tr>
@@ -58,7 +58,7 @@
             
                   <h2 class="red">Exemptions</h2>
             
-            <p>If you're a very small political party and we really like what you stand for, we may bend this rule and provide you with free access to eConvenor. Feel free to <a href="mailto:fees@econvenor.org?subject=Fee+exemption+enquiry">email us</a>&nbsp;to put your case.</p>
+            <p>If you're a very small union or political party and we really like what you stand for, we may bend this rule and provide you with free access to eConvenor. Feel free to <a href="mailto:fees@econvenor.org?subject=Fee+exemption+enquiry">email us</a>&nbsp;to put your case.</p>
             <p>If you're a union or political party in a lower-income or less democratic country, you can use eConvenor free of charge.</p>      
             
             </p>
