Converted double dashes to m-dashes

--- a/landing/templates/pricing.html
+++ b/landing/templates/pricing.html
@@ -23,7 +23,7 @@
         <div class="row">
           <div class="col-md-10">
           <h2 class="red">Account pricing</h2>
-<p>Unions and political parties in high-income, reasonably democratic countries who use eConvenor must pay a fee to support the project. You can set up a free 30-day trial account to evaluate the service first -- press the sign up button above and follow the prompts.</p>
+<p>Unions and political parties in high-income, reasonably democratic countries who use eConvenor must pay a fee to support the project. You can set up a free 30-day trial account to evaluate the service first &mdash; press the sign up button above and follow the prompts.</p>
             <table class="table table-bordered">
               <tbody>
                 <tr>
