--- a/landing/templates/project.html
+++ b/landing/templates/project.html
@@ -26,7 +26,7 @@
             <p class="lead">We provide the eConvenor service to help activist groups around the world be better organised and more effective.</p>
             <h2 class="red">Background</h2>
             <p class="lead">The eConvenor project is a volunteer-run and not-for-profit.</p>
-            <p class="lead">The core of the project are Keira and Sky -- two activists from Melbourne, Australia -- who were motivated to create eConvenor by decades of watching activist groups struggle to organise themselves and be effective.</p>
+            <p class="lead">The core of the project are Keira and Sky &mdash; two activists from Melbourne, Australia &mdash; who were motivated to create eConvenor by decades of watching activist groups struggle to organise themselves and be effective.</p>
             <p class="lead">The eConvenor service went live in April 2014.</p>
             <h2 class="red">Join in</h2>
             <p class="lead">eConvenor is an exciting project and it's off to a flying start.</p>
