--- a/landing/templates/questions.html
+++ b/landing/templates/questions.html
@@ -44,7 +44,7 @@
                 </div>
                 <div class="faq-body">
                   <p class="lead">Two Australian activists.</p>
-                  <p>eConvenor was started by two activists from Melbourne, Australia -- Keira and Sky.</p>
+                  <p>eConvenor was started by two activists from Melbourne, Australia &mdash; Keira and Sky.</p>
                   <p>For a few decades we've seen how campaigns and groups struggle to organise themselves and get things done efficiently.</p>
                   <p> One day we realised that a lot of the work of convening a group could be done by a computer, so although we don't have IT backgrounds, we decided to try and make a "virtual convenor". eConvenor is the result and the service launched in April 2014.</p>
                 </div>
@@ -59,8 +59,8 @@
                 </div>
                 <div class="faq-body">
                   <p class="lead">It's as secure as we can make it, but all security is relative.</p>
-                  <p>There's no such thing as perfect computer security -- data is routinely stolen even from well-resourced targets like governments and transnational corporations. We do our best to keep eConvenor secure, but we can't give any guarantees.</p>
-                  <p>Broadly speaking, there are three types of security to consider with regard to data held in a web service -- security against theft, security against government demand and security against accidental loss.</p>
+                  <p>There's no such thing as perfect computer security &mdash; data is routinely stolen even from well-resourced targets like governments and transnational corporations. We do our best to keep eConvenor secure, but we can't give any guarantees.</p>
+                  <p>Broadly speaking, there are three types of security to consider with regard to data held in a web service &mdash; security against theft, security against government demand and security against accidental loss.</p>
                   <p><strong>Theft:</strong> eConvenor is built on Django. Django is a mature, open-source web-application framework which has had plenty of time to get the underlying security right. eConvenor is hosted by Webfaction in the UK. Webfaction are a Platform as a Service (PaaS) provider who make sure that the server which eConvenor runs on is up-to-date and well maintained. eConvenor shouldn't be an easy target for data theft.</p>
                   <p><strong>Government demand:</strong> eConvenor is based in Australia and runs on servers in the UK. We will only hand data over to a government agency if we are forced to by a valid Australian or UK court order, and even then we'll fight against any demand vigourously. Note though that goverment agencies have used sophisticated technical means to secretly collect data from even the largest web service providers (Gmail, Facebook, etc) and eConvenor's code and servers might be vulerable to such attacks.</p>
                   <p><strong>Accidental loss:</strong> We keep multiple backups of your data on our UK server, and multiple backups of your data on our machines in Australia. The possibility of accidental loss of data is remote. Also, eConvernor emails you all your agendas and minutes, so you also have your own copies of much of the data which eConvenor stores for you.</p>
@@ -96,7 +96,7 @@
                 <div class="faq-body">
                   <p class="lead">Sadly, you can't.</p>
                   <p>We don't like it, but we have to say it: setting up a service like eConvenor would be a good way for an intelligence service (or services) to spy on activist groups.</p>
-                  <p>Although we know we're not spies, cops, or anthing of that nature, there's nothing we can do or say that can prove that to you. That said, you can't know whether any web service might be spying on you. Keep in mind also that we know that services like Google and Facebook -- which many groups use to organise themselves -- are spying on their users.</p>
+                  <p>Although we know we're not spies, cops, or anthing of that nature, there's nothing we can do or say that can prove that to you. That said, you can't know whether any web service might be spying on you. Keep in mind also that we know that services like Google and Facebook &mdash; which many groups use to organise themselves &mdash; are spying on their users.</p>
                   <p>With all data your group puts online, whether with eConvenor or any other web service, ask yourself if it would be a problem if government agencies saw it. For most groups, the answer to that question will be "no" most of the time. When the answer is "yes" though, keep that data off the internet unless you really know your way around encryption tools.</p>
                 </div>
               </li>
