--- a/landing/templates/source.html
+++ b/landing/templates/source.html
@@ -29,7 +29,7 @@
             <p class="lead">Take a look at eConvenor's <a href="https://trac.econvenor.org" target="_blank">Trac issue tracker</a> to see what needs to be done next.</p>
             <p class="lead">Feel free to take on anything you see there!</p>
             <h2 class="red">Licence</h2>
-            <p class="lead">This licence applies to use of the eConvenor source code if, for example, you decide to run it on your own server. This licence doesn't apply to use of the econvenor.org service -- it's covered by our <a href={% url 'terms' %}>Terms and Conditions</a>.</p>
+            <p class="lead">This licence applies to use of the eConvenor source code if, for example, you decide to run it on your own server. This licence doesn't apply to use of the econvenor.org service &mdash; it's covered by our <a href={% url 'terms' %}>Terms and Conditions</a>.</p>
             <p>Use of the eConvenor source code and its documentation (the "Software") is subject to these conditions:</p>
             <p>1. The Software must only be used by groups or organisations which are not-for-profit, have a progressive focus and are commited to social justice.</p>
             <p>2. Unions and political parties must pay the eConvenor project an annual licence fee to use the Software. Unions and political parties must contact the eConvenor project by email and pay the licence fee which the eConvenor project sets in return for the right to use the Software.</p>
